--- a/css/style_home.css
+++ b/css/style_home.css
@@ -1,6 +1,6 @@
 body {
     background-color: bisque;
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: 'Poppins', sans-serif;
 }
 
 #content {
