--- a/css/small.css
+++ b/css/small.css
@@ -1,6 +1,7 @@
 body {
     background-color: bisque;
     font-family: 'Poppins', sans-serif;
+    padding: 5%;
 }
 
 #content {
@@ -10,7 +11,7 @@ body {
 
 .logo-box {
     background-color: cornflowerblue;
-    width: 500px;
+    width: 90%;
     height: 200px;
     grid-template-columns: 1fr 2fr;
     display: grid;
@@ -37,13 +38,24 @@ h2 {
     text-align: center;
 }
 
+ul {
+    display: block;
+    list-style-type: disc;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0;
+    margin-inline-end: 0;
+    padding-inline-start: 5%;
+    padding-inline-end: 5%
+}
+
 li {
-    margin-left: 230px;
+    margin-left: 10%;
 }
 
 footer {
     background-color: cornflowerblue;
-    width: 500px;
+    width: 90%;
     height: 100px;
     margin: auto;
     box-shadow: 10px 010px 5px;
