--- a/css/medium.css
+++ b/css/medium.css
@@ -11,8 +11,11 @@
         border-radius: 25px;
     }
     
-    li {
-        margin-left: 15%;
+    ul {
+        display: block;
+        width: 500px;
+        list-style-type: disc;
+        margin-block: auto;
     }
 
     footer {
