--- a/css/small.css
+++ b/css/small.css
@@ -40,6 +40,7 @@ h2 {
 
 ul {
     display: block;
+    width: 90%;
     list-style-type: disc;
     margin-block-start: 1em;
     margin-block-end: 1em;
