--- a/lesson2/css/small.css
+++ b/lesson2/css/small.css
@@ -7,7 +7,7 @@ html {-webkit-text-size-adjust: 100%;
 
 /* body rules here */
 body {
-    font-family: 'Secular One', sans-serif;
+    font-family: 'Ubuntu', sans-serif;
     font-size: 16px;
 }
 
