--- a/chamber/css/small.css
+++ b/chamber/css/small.css
@@ -5,7 +5,7 @@ html {-webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%;}
 * { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
 
 h1{
-    font-family:Arial, Helvetica, sans-serif;
+    font-family: 'Secular One', sans-serif;
     font-size: 30px;
     color: red;
     border-color: #111;
@@ -13,7 +13,7 @@ h1{
 
 h2{
     margin: 0 2vw;
-    font-family:Arial, Helvetica, sans-serif;
+    font-family: 'Secular One', sans-serif;
     font-size: 25px;
     color: red;
     border-color: #111;
@@ -21,7 +21,7 @@ h2{
 
 h3{
     margin: 0 2vw;
-    font-family:Arial, Helvetica, sans-serif;
+    font-family: 'Secular One', sans-serif;
     font-size: 20px;
     color: red;
     border-color: #111;
@@ -29,7 +29,7 @@ h3{
 
 p{
     margin: 0 2vw;
-    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    font-family: 'Lora', serif;
     border-color: #111;
 }
 
@@ -48,6 +48,7 @@ header h1{
     color: #eee;
     font-size: 40px;
     text-align: center;
+    font-family: 'Courgette', cursive;
 }
 
 header h2{
@@ -55,6 +56,8 @@ header h2{
     padding-bottom: 2vw;
     color: #eee;
     text-align: center;
+    font-family: 'Courgette', cursive;
+    font-size: 30px;
 }
 
 img {
@@ -84,6 +87,8 @@ nav button {
 }
 nav {
     background-color: rgb(170, 11, 11);
+    font-family: 'Roboto', sans-serif;
+    font-size: 30px;
 }
 nav ul {
     list-style-type: none;
@@ -205,8 +210,10 @@ footer{
     text-align: center;
     background-color: rgb(170, 11, 11);
     color: #eee;
-    font-family:Arial, Helvetica, sans-serif;
+    font-family: 'Roboto', sans-serif;
     padding: 2vw;
+    font-size: 20px;
+
 }
 
 footer img{
