--- a/lesson03/css/small.css
+++ b/lesson03/css/small.css
@@ -67,49 +67,49 @@ table td{
 }
 
 .siteheader {
-    font-family: 'Secular One', sans-serif;
+    font-family: 'Courgette', cursive;
     background-color: red;
     color: #eee;
     font-size: 40px;
 }
 
 .primarynavigation {
-    font-family: 'Secular One', sans-serif;
+    font-family: 'Roboto', sans-serif;
     background-color: rgb(253, 39, 39);
     color: #eee;
     font-size: 30px;
 }
 
 .footernavigation {
-    font-family:Arial, Helvetica, sans-serif;
+    font-family: 'Roboto', sans-serif;
     background-color: rgb(255, 82, 82);
     color: #eee;
     font-size: 20px;
 }
 
 .header1 {
-    font-family:Arial, Helvetica, sans-serif;
+    font-family: 'Secular One', sans-serif;
     font-size: 30px;
     color: red;
     border-color: #111;
 }
 
 .header2 {
-    font-family:Arial, Helvetica, sans-serif;
+    font-family: 'Secular One', sans-serif;
     font-size: 25px;
     color: red;
     border-color: #111;
 }
 
 .header3 {
-    font-family:Arial, Helvetica, sans-serif;
+    font-family: 'Secular One', sans-serif;
     font-size: 20px;
     color: red;
     border-color: #111;
 }
 
 .ptext {
-    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    font-family: 'Lora', serif;
     border-color: #111;
 }
 
