--- a/chamber/css/small.css
+++ b/chamber/css/small.css
@@ -60,10 +60,10 @@ header h2{
     font-size: 30px;
 }
 
-img {
+header img{
     height: 100px;
     width: 100px;
-    margin: 0.5rem 2vw;
+    margin: 2vw;
     border: 1px solid #bbb;
     padding: 0;
     border-radius: 0.5rem;
@@ -89,6 +89,7 @@ nav {
     background-color: rgb(170, 11, 11);
     font-family: 'Roboto', sans-serif;
     font-size: 30px;
+    display: flex;
 }
 nav ul {
     list-style-type: none;
@@ -111,8 +112,6 @@ nav ul li.active a {
     color: #fff;
 }
 
-
-
 nav ul li a:hover {
     background-color: rgba(0,0,0,0.3);
 }
@@ -124,6 +123,21 @@ nav ul.open {display: block;}
 
 #hamburgerBtn.open span:nth-child(1) {display: none;}
 #hamburgerBtn.open span:nth-child(2) {display: block;}
+
+
+div#message {
+    margin-top: 10px;
+    text-align: center;
+    border-bottom: 10px  rgb(170, 11, 11);
+    font-size: 20px;
+    font-family: 'Secular One', sans-serif;
+    font-size: 20px;
+    color: red;
+    border-color: #111;
+}
+div.showme {display:block;}
+div.hideme {display: none;}
+
 
 main{
     margin: 2vw;
@@ -138,7 +152,31 @@ main{
     border: 1px solid  rgba(0,0,0,0.5);
     background-color: rgb(252, 149, 149);
     height: 300px;
- 
+    position: relative;
+}
+
+.box1 img{
+    width: 100%;
+    height: 300px;
+}
+
+.calltoaction {
+    position: absolute;
+    padding: 0.5em 1rem;
+    top: 40px;
+    right: 40px;
+    background-color: #eee;
+    border: 1px solid rgba(0,0,0,0.5);
+    box-shadow: 0 0 30px;
+    border-radius: 0.5em;
+    overflow: hidden;
+}
+
+.calltoaction a{
+    text-decoration: none;
+    font-family: 'Secular One', sans-serif;
+    font-size: 20px;
+    color:  red;
 }
 
 .box2{
@@ -146,7 +184,28 @@ main{
     margin: 2vw 0;
     background-color: rgb(252, 149, 149);
     height: 300px;
+    text-align: center;
+    padding: 2vw;
+    box-shadow: 0 0 10px;
+    border-radius: 0.25vw;
+    overflow: hidden;
+}
 
+.box2 img{
+    height: 100px;
+    width: 100px;
+}
+
+.market{
+    display: block;
+    padding: 10px 3vw;
+    margin: 1vw;
+    background-color: rgb(170, 11, 11);
+    text-decoration: none;
+    color: #eee;
+    border-radius: 0.5em;
+    overflow: hidden;
+    box-shadow: 0 0 10px;
 }
 
 .box3{
@@ -155,7 +214,18 @@ main{
     background-color: rgb(252, 149, 149);
     height: 300px;
     width: 100%;
+    text-align: center;
+    padding: 2vw;
+    box-shadow: 0 0 10px;
+    border-radius: 0.25vw;
+    overflow: hidden;
 }
+
+.box3 img{
+    height: 100px;
+    width: 100px;
+}
+
 
 .box4{
     border: 1px solid  rgba(0,0,0,0.5);
@@ -163,21 +233,30 @@ main{
     background-color: rgb(252, 149, 149);
     height: 300px;
     width: 100%;
+    text-align: center;
+    padding: 2vw;
+    box-shadow: 0 0 10px;
+    border-radius: 0.25vw;
+    overflow: hidden;
 }
 
 .box5{
-    display: none
+    display: none;
 }
 
 .box6{
     border: 1px solid  rgba(0,0,0,0.5);
     margin: 2vw 0;
     background-color: rgb(252, 149, 149);
-    height: 300px;
+    height: 600px;
     width: 100%;
     display: flex;
     flex-direction: column;
     Padding: 2vw;
+    text-align: center;
+    box-shadow: 0 0 10px;
+    border-radius: 0.25vw;
+    overflow: hidden;
 }
 
 .box7{
@@ -186,6 +265,16 @@ main{
     background-color: rgb(252, 149, 149);
     height: 100%;
     width: 100%;
+    text-align: center;
+    padding: 2vw;
+    box-shadow: 0 0 10px;
+    border-radius: 0.25vw;
+    overflow: hidden;
+}
+
+.box7 img{
+    height: 100px;
+    width: 100px;
 }
 
 .box8{
@@ -194,6 +283,16 @@ main{
     background-color: rgb(252, 149, 149);
     height: 100%;
     width: 100%;
+    text-align: center;
+    padding: 2vw;
+    box-shadow: 0 0 10px;
+    border-radius: 0.25vw;
+    overflow: hidden;
+}
+
+.box8 img{
+    height: 100px;
+    width: 100px;
 }
 
 .box9{
@@ -202,7 +301,17 @@ main{
     background-color: rgb(252, 149, 149);
     height: 100%;
     width: 100%;
-    display: none
+    display: none;
+    text-align: center;
+    padding: 2vw;
+    box-shadow: 0 0 10px;
+    border-radius: 0.25vw;
+    overflow: hidden;
+}
+
+.box9 img{
+    height: 100px;
+    width: 100px;
 }
 
 footer{
@@ -219,6 +328,27 @@ footer{
 footer img{
     display: block;
     margin: 2vw auto;
+    height: 100px;
+    width: 100px;
+    border: 1px solid #bbb;
+    padding: 0;
+    border-radius: 0.5rem;
+    overflow: hidden;
+}
+
+footer ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+
+footer ul li a {
+    text-decoration: none;
+    color: #eee;
+}
+
+.flaticon{
+    font-size: 0.5rem;
 }
 
 * {
