--- a/chamber/css/small.css
+++ b/chamber/css/small.css
@@ -124,6 +124,11 @@ nav ul.open {display: block;}
 #hamburgerBtn.open span:nth-child(1) {display: none;}
 #hamburgerBtn.open span:nth-child(2) {display: block;}
 
+.icon {
+    width: 5px;
+    height: 5px;
+    float: right;
+}
 
 div#message {
     margin-top: 10px;
@@ -137,7 +142,6 @@ div#message {
 }
 div.showme {display:block;}
 div.hideme {display: none;}
-
 
 main{
     margin: 2vw;
@@ -219,11 +223,37 @@ main{
     box-shadow: 0 0 10px;
     border-radius: 0.25vw;
     overflow: hidden;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 3fr 1fr 1fr;
+}
+
+.box3 h3{
+    text-align: center;
+    grid-row: 1 / 2;
+    grid-column: 1 / 3;
 }
 
 .box3 img{
     height: 100px;
     width: 100px;
+    grid-column: 1 / 2;
+    grid-row: 2 / 3;
+    margin: 10vw;
+}
+
+.temp{
+    font-size: 3rem;
+    grid-column: 2 / 3;
+    grid-row: 2 / 3;
+    margin: 10vw;
+}
+
+.weather {
+    grid-column: 1/3;
+    grid-row: 3/4;
+    text-align: center;
+    border-bottom: 1 px solid rgba(0,0,0,0.5);
 }
 
 
