--- a/chamber/css/medium.css
+++ b/chamber/css/medium.css
@@ -24,6 +24,15 @@
     grid-column: 3 / 4;
     grid-row: 5 / 6;
     margin: 0 0;
+    display: block;
+}
+
+.box3 img{
+    margin: 2vw;
+}
+
+.temp{
+    margin: 2vw;
 }
 
 .box4 {
