--- a/lesson-8/tablecss.css
+++ b/lesson-8/tablecss.css
@@ -1,12 +1,12 @@
 :root {
-	--back: hsla(150, 50%, 30%, 1);
-  --back2: hsla(150, 50%, 30%, .5);
+	--back: #6a2673;
+  --back2: rgba(156, 77, 152, 0.5);
   --foredark: hsla(0,0%,10%,1);
 	--forelight: hsla(0,0%,100%,1);
 	--border: hsl(0,0%,20%);
 	--borderlight: hsl(0,0%,33%);
 	--shadow: hsl(0,0%,50%);
-	--zebra: hsl(0, 0%, 93%, 1);
+	--zebra: rgb(211, 172, 208);
 }
 
 table {
@@ -19,7 +19,7 @@ table {
 caption {
   padding: 10px;
   caption-side: bottom;
-	color: var(--back);
+	color: #6a2673;
 	font-size: .85rem;
 }
 
@@ -47,4 +47,5 @@ tbody tr:nth-child(even) {
 
 h1 {
 	text-align: center;
+	color: #6a2673;
 }
