--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -19,7 +19,7 @@ nav ul li a {
 .wrapper {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-auto-rows: repeat( 3, 300px);
+    grid-template-rows: repeat(3, 300px);
     margin-top: 2vw;
 }
 
