--- a/chamber/css/medium.css
+++ b/chamber/css/medium.css
@@ -86,5 +86,14 @@ div.discover img:hover{
     margin: 2vw;
 }
 
+.list section{
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    justify-content: left;
+}
+
+
+
 
 } /* end medium */
