--- a/weather-api/css/medium.css
+++ b/weather-api/css/medium.css
@@ -19,11 +19,18 @@
     }
 
     footer {
+        display: flex;
         background-color: cornflowerblue;
         width: 500px;
         height: 100px;
         margin: auto;
         box-shadow: 10px 010px 5px;
         border-radius: 25px;
+        align-items: center;
+        justify-content: center;
+    }
+
+    body {
+        text-align: center;
     }
 }
