--- a/chamber/css/small.css
+++ b/chamber/css/small.css
@@ -300,7 +300,7 @@ div.discover img{
     overflow: hidden;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 3fr 1fr 1fr;
+    grid-template-rows: 1fr 2fr 1fr 1fr 1fr;
 }
 
 .box3 h3{
@@ -324,13 +324,24 @@ div.discover img{
     margin: 10vw;
 }
 
-.weather {
+#weather {
     grid-column: 1/3;
     grid-row: 3/4;
     text-align: center;
     border-bottom: 1px solid rgba(0,0,0);
 }
 
+.windspeed {
+    grid-column: 1/2;
+    grid-row: 4/5;
+    text-align: center;
+}
+
+.windchill {
+    grid-column: 2/3;
+    grid-row: 4/5;
+    text-align: center;
+}
 
 .box4{
     border: 1px solid  rgba(0,0,0,0.5);
