--- a/chamber/css/small.css
+++ b/chamber/css/small.css
@@ -19,6 +19,10 @@ h2{
     border-color: #111;
 }
 
+.contact {
+    margin: 10px 2vw;
+}
+
 h3{
     margin: 0 2vw;
     font-family: 'Secular One', sans-serif;
@@ -201,6 +205,11 @@ form label.top input:required {
 form label.top input:required:valid {
     border-left: green solid 6px;
 
+}
+
+.comments{
+    width: 300px;
+    height: 500px;
 }
 
 #submitdate {
@@ -502,7 +511,7 @@ section {
 }
 
 footer{
-    display: grid;
+    display: block;
     text-align: center;
     background-color: rgb(170, 11, 11);
     color: #eee;
@@ -546,3 +555,4 @@ footer ul li a {
 	text-align: center;
 	font-size: smaller;
 }
+
