--- a/Final Project/css/medium.css
+++ b/Final Project/css/medium.css
@@ -1,24 +1,24 @@
 /*35rem is also 560px when basefont is 16px */
 @media only screen and (min-width: 35rem) {
 
-.wrapper {
+/*.wrapper {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: minmax(300px, auto);
     gap: 10px;
-}
+}*/
 
-.box1{
+/*.box1{
     grid-column: 1 / 4;
     grid-row: 1 / 2;
-}
+}*/
 
-.box2{
+/*.box2{
     grid-column: 1 / 3;
     grid-row-start: 5;
     grid-row-end: 6;
     margin: 0 0;
-}
+}*/
 
 .box3 {
     grid-column: 3 / 4;
@@ -31,33 +31,65 @@
     margin: 2vw;
 }
 
+.box3 h4{
+    margin: auto;
+}
+
 .temp{
     margin: 2vw;
 }
 
 .box4 {
-    grid-column-start: 1;
-    grid-column-end: 4;
-    grid-row-start: 2;
-    grid-row-end: 3;
-    margin: 0 0;
+    height: 375px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 6fr;
+}
+
+.box4 h3{
+    grid-column: 1/3;
+    grid-row: 1/2;
+    text-align: center;
+}
+
+.box4 img  {
+    grid-column: 2/3;
+    grid-row: 2/3;
+    margin: auto;
+    
+}
+
+.box4 p{
+    grid-column: 1/2;
+    grid-row: 2/3;
+    margin: auto;
 }
 
 .box5 {
-    grid-column: 1 / 4;
-    grid-row: 4 / 5;
     display: grid;
-    border: 1px solid  rgba(0,0,0,0.5);
-    margin: 2vw 0;
-    background-color: rgb(252, 149, 149);
-    height: 300px;
-    width: 100%;
-    margin: 0 0;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 6fr;
+    height: 250px;
+}
+
+.box5 h3{
+    grid-column: 1/3;
+    grid-row: 1/2;
     text-align: center;
-    padding: 2vw;
-    box-shadow: 0 0 10px;
-    border-radius: 0.25vw;
-    overflow: hidden;
+}
+
+.box5 img{
+    grid-column: 1/2;
+    grid-row: 2/8;
+    margin: auto;
+    padding: 0.5rem;
+}
+
+.box5 p{
+    grid-column: 2/3;
+    grid-row: 2/8;
+    margin: auto;
+    padding: 0.5rem;
 }
 
 .join{
