--- a/Final Project/css/small.css
+++ b/Final Project/css/small.css
@@ -51,7 +51,7 @@ header h1{
     color: rgb(75, 3, 21);
     font-size: 40px;
     text-align: center;
-    font-family: 'Courgette', cursive;
+    font-family: 'Asap', sans-serif;
 }
 
 header h2{
@@ -59,7 +59,7 @@ header h2{
     padding-bottom: 2vw;
     color: #eee;
     text-align: center;
-    font-family: 'Courgette', cursive;
+    font-family: 'Arsenal', sans-serif;
     font-size: 30px;
 }
 
@@ -90,7 +90,7 @@ nav button {
 }
 nav {
     background-color: rgba(235, 129, 8, 0.815);
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Asap', sans-serif;
     font-size: 30px;
     display: flex;
 }
@@ -128,10 +128,13 @@ nav ul.open {display: block;}
 #hamburgerBtn.open span:nth-child(2) {display: block;}
 
 .social-media {
-    justify-content: right;
-    width: 330px;
-    float: left;
-    margin-left: 1145px;
+    display: flex;
+    justify-content: center;
+}
+
+.social-media img {
+    width: 50px;
+    height: 50px;
 }
 
 body {
@@ -271,6 +274,7 @@ div.discover img{
     height: 150px;
     text-align: center;
     padding: 2vw;
+    font-family: 'Asap', sans-serif;
     /*box-shadow: 0 0 10px;
     border-radius: 0.25vw;
     overflow: hidden;*/
@@ -295,6 +299,7 @@ div.discover img{
 
 .box3{
     /*border: 1px solid  rgba(0,0,0,0.5);*/
+    font-family: 'Asap', sans-serif;
     margin: 2vw 0;
     background-color: rgba(235, 129, 8, 0.815);
     height: 300px;
@@ -306,7 +311,7 @@ div.discover img{
     overflow: hidden;*/
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 2fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
 }
 
 .box3 h3{
@@ -316,58 +321,76 @@ div.discover img{
 }
 
 .box3 img{
-    height: 100px;
-    width: 100px;
+    height: 50px;
+    width: 50px;
     grid-column: 1 / 2;
-    grid-row: 2 / 3;
-    margin: 10vw;
+    grid-row: 3 / 5;
+    margin: auto;
 }
 
 .temp{
-    font-size: 3rem;
+    font-size: 2rem;
     grid-column: 2 / 3;
-    grid-row: 2 / 3;
-    margin: 10vw;
+    grid-row: 2 / 4;
+    margin: auto;
+}
+
+.box3 h4{
+    grid-column: 1/3;
+    grid-row: 5/6;
+    text-align: center;
+    font-size: 1.5rem;
+    font-family: 'Arsenal', sans-serif;
 }
 
 #weather {
-    grid-column: 1/3;
-    grid-row: 3/4;
+    grid-column: 1/2;
+    grid-row: 2/3;
     text-align: center;
     font-size: 1.5rem;
-    border-bottom: 1px solid rgba(0,0,0);
+    font-family: 'Arsenal', sans-serif;
 }
 
-.windspeed {
-    grid-column: 1/2;
-    grid-row: 4/5;
+.forecast{
+    grid-column: 1/3;
+    grid-row: 6/7;
     text-align: center;
+    font-family: 'Asap', sans-serif;
 }
 
-.windchill {
+.humidity {
     grid-column: 2/3;
     grid-row: 4/5;
     text-align: center;
+    font-family: 'Asap', sans-serif;
 }
 
 .box4{
     /*border: 1px solid  rgba(0,0,0,0.5);*/
     margin: 2vw 0;
     background-color: rgba(235, 129, 8, 0.815);
-    height: 400px;
+    height: 450px;
     width: 100%;
     text-align: center;
     padding: 2vw;
     /*box-shadow: 0 0 10px;
     border-radius: 0.25vw;
     overflow: hidden;*/
+}
+
+.box4 img{
+    margin: 0.5rem;
+}
+
+.box4 h3{
+    margin: 0.5rem;
 }
 
 .box5{
     /*border: 1px solid  rgba(0,0,0,0.5);*/
     margin: 2vw 0;
     background-color: rgba(235, 129, 8, 0.815);
-    height: 300px;
+    height: 350px;
     width: 100%;
     text-align: center;
     padding: 2vw;
@@ -376,11 +399,19 @@ div.discover img{
     overflow: hidden;*/
 }
 
+.box5 img{
+    margin: 0.5rem;
+}
+
+.box5 h3{
+    margin: 0.5rem;
+}
+
 .ordercard{
     /*border: 1px solid  rgba(0,0,0,0.5);*/
     margin: 2vw 0;
     background-color: rgba(235, 129, 8, 0.815);
-    height: 300px;
+    height: 100px;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -458,9 +489,9 @@ section {
 footer{
     display: block;
     text-align: center;
-    background-color: rgb(170, 11, 11);
-    color: #eee;
-    font-family: 'Roboto', sans-serif;
+    background-color: rgb(75, 3, 21);
+    color: rgba(235, 129, 8);
+    font-family: 'Asap', sans-serif;
     padding: 2vw;
     font-size: 20px;
 
@@ -471,7 +502,7 @@ footer img{
     margin: 2vw auto;
     height: 100px;
     width: 100px;
-    border: 1px solid #bbb;
+   /*border: 1px solid #bbb;*/
     padding: 0;
     border-radius: 0.5rem;
     overflow: hidden;
@@ -486,7 +517,7 @@ footer ul {
 
 footer ul li a {
     text-decoration: none;
-    color: #eee;
+    color: rgb(75, 3, 21);
 }
 
 .flaticon{
