--- a/Final Project/css/medium.css
+++ b/Final Project/css/medium.css
@@ -1,24 +1,16 @@
 /*35rem is also 560px when basefont is 16px */
 @media only screen and (min-width: 35rem) {
 
-/*.wrapper {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: minmax(300px, auto);
-    gap: 10px;
-}*/
+form fieldset{
+    width: 400px;
+    margin: auto;
+}
 
-/*.box1{
-    grid-column: 1 / 4;
-    grid-row: 1 / 2;
-}*/
-
-/*.box2{
-    grid-column: 1 / 3;
-    grid-row-start: 5;
-    grid-row-end: 6;
-    margin: 0 0;
-}*/
+form input.submitBtn {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
 
 .box3 {
     grid-column: 3 / 4;
@@ -56,7 +48,7 @@
     grid-column: 2/3;
     grid-row: 2/3;
     margin: auto;
-    
+
 }
 
 .box4 p{
