--- a/Final Project/css/small.css
+++ b/Final Project/css/small.css
@@ -150,20 +150,21 @@ main{
 
 form fieldset {
     margin: 2rem 0;
-    border: 1px solid rgb(170, 11, 11);
+    border: 1px solid rgb(75, 3, 21);
     border-radius: 10px;
     padding: .5rem 2%;
 
 }
+
 form legend {
-    color: rgb(170, 11, 11);
+    color: rgb(75, 3, 21);
     margin: 0 1rem;
     padding: 0 .5rem;
 }
 form label.top, form div {
     display: block;
     padding-top: 1rem;
-    color: #9c2c13;
+    color: rgb(75, 3, 21);
     font-size: .8rem;
 
 }
@@ -171,30 +172,32 @@ form label.top input, form label.top select {
     /*---webkit-appearance: none;*/
     display: block;
     font-size: 1rem;
-    border: solid 1px #999;
+    border: solid 1px rgb(107, 75, 6);
     border-radius: 4px;
     padding: .75rem;
-    color: #555;
+    color: rgb(107, 75, 6);
     width: 100%;
     max-width: 20rem;
-    background-color: rgba(0,0,0,0)
+    background-color: rgba(235, 129, 8, 0.815)
 
 }
 form label.sbs {
     display: block;
     padding: .75rem 0;
-    color: #555;
+    color: rgb(107, 75, 6);
 }
 
 form input.submitBtn {
     border: none;
-    background-color: #9c2c13;
-    color: white;
+    background-color: rgb(75, 3, 21);
+    color: rgba(235, 129, 8);
     border-radius: 1rem;
     padding: .75rem 1.5rem;
-    margin: 0 0 2rem 2%;
+    margin: 1rem 0 2rem 2%;
     width: 96%;
     max-width: 20rem;
+    font-weight: bold;
+    font-size: 1.5rem;
 }
 
 form label.top input:required {
@@ -208,27 +211,19 @@ form label.top input:required:valid {
 
 .comments{
     width: 300px;
-    height: 500px;
+    height: 300px;
+    background-color: rgba(235, 129, 8, 0.815)
 }
 
 #submitdate {
     display: none;
 }
 
-div.discover{
-    display: block;
-    filter: blur(0em);
-    transition: filter 0.5s;
+#formInfo {
+    margin: 2rem auto;
+    font-size: 1rem;
 }
 
-img[data-srcset] {
-    filter: blur(0.2em);
-}
-
-div.discover img{
-    width: 75%;
-    margin: 2vw 10vw;
-}
 
 .wrapper {
     display: flex;
@@ -236,8 +231,7 @@ div.discover img{
 }
 
 .box1{
-    border: 1px solid  rgba(0,0,0,0.5);
-    background-color: rgb(252, 149, 149);
+    background-color: rgba(235, 129, 8, 0.815);
     height: 300px;
     position: relative;
     box-shadow: 0 0 10px;
